// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="FormGroup"
>
   
  <select
    multiple={true}
  >
    <option
      value="foo"
    >
      foo
    </option>
    <option
      value="bar"
    >
      bar
    </option>
  </select>
   
</div>
`;

exports[`should render filtered items 1`] = `
<div
  className="FormGroup"
>
   
  <select
    multiple={true}
  >
    <option
      value="foo"
    >
      foo
    </option>
  </select>
   
</div>
`;

exports[`should render multiple value 1`] = `
<div
  className="FormGroup"
>
   
  <select
    multiple={true}
  >
    <option
      value="foo"
    >
      foo
    </option>
    <option
      value="bar"
    >
      bar
    </option>
  </select>
   
</div>
`;
